# UCTF-2024

./: CONTRIBUTING.md  README.md
alikiani-hard/: Dockerfile  README.md  docker-compose.yml  hard-deployment.yaml  pwn_hard.c
alikiani-intermediate/: README.md  main.c
ascii-art-studio/: README.md
catch-me-if-you-can/: README.md
drag-n-zip/: README.md
execution/: README.md  UCTF.sln  solver.py
flag-reveal/: README.md
flag-seller/: Dockerfile  README.md  build.gradle  build.sh  docker-compose.yml  flag-seller-app-claim0-persistentvolumeclaim.yaml  flag-seller-app-deployment.yaml  settings.gradle
graphical-giggles/: README.md
heritage-encryption/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  heritage-deployment.yaml  requirements.txt  script.py
hidden-coordinates/: README.md
karaball/: .gitignore  README.md
keep-alive-bingo/: .dockerignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  keep-alive-deployment.yaml
lookup/: Dockerfile  README.md  compose.yaml  look-up-deployment.yaml  look-up.c  solve.py
lost-voyage/: Alice.pcapng  README.md
lucky-guess/: LICENSE  README.md
modal1/: README.md
modal2/: README.md
orange/: Dockerfile  README.md  compose.yaml  orange-deployment.yaml  orange.c  solve.py
paho-puzzle/: README.md
rasa/: README.md
revng/: CMakeLists.txt  README.md  flag.txt  solve.py
revng/inc/: prng.h
revng/src/: main.cpp  prng.cpp
sergio/: README.md
server-side-template-injection/: README.md  main.py
silent-knocker/: README.md
simple/: README.md
strange-vacuum-cleaner/: README.md
(+135 files in other folders)
